--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # Site settings
-baseURL = "http://example.org/"
+baseURL = "aman-sharma-portfolio.netlify.app"
 languageCode = "en-us"
-title = "Forty"
+title = "Aman Sharma"
 theme = "forty"
 
 # Enter your tracking code to enable Google Analytics
@@ -81,7 +81,7 @@ disqusShortname = ""
   [params.banner]
     # To change the background image on the homepage banner, replace 'banner.jpg' in
     # the 'static/img' folder.
-    title = "Hi, my name is Forty"
+    title = "Hi, my name is Aman"
     subtitle = "A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP\nAND RELEASED UNDER THE CREATIVE COMMONS."
     buttonText = "Get Started"
 
@@ -172,7 +172,7 @@ disqusShortname = ""
     # by copying the corresponding map with frontmatter code.
     [[params.contact.email]]
     title = "Email"
-    email = "example@domain.com"
+    email = "asharma.mfa2021@london.edu"
 
     [[params.contact.phone]]
     title = "Phone"
